<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    tools:context=".Register">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"/>

    <EditText
        android:id="@+id/et_register_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/blanc"
        android:textColorHint="@color/blanc"
        android:hint="@string/login_et_mail"
        android:inputType="textEmailAddress"
       />
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"/>
    <EditText
        android:id="@+id/et_register_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blanc"
        android:textColorHint="@color/blanc"
        android:ems="10"
        android:hint="@string/register_et_pwd"
        android:inputType="textPassword"
        /><Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"/>
        <EditText
            android:id="@+id/et_register_pseudo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blanc"
            android:textColorHint="@color/blanc"
            android:ems="10"
            android:hint="@string/et_register_pseudo"
            android:inputType="textPersonName"
            /><Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"/>

    <Button
        android:id="@+id/btn_register_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/gris"
        android:textColor="@color/blanc"
        android:text="@string/btn_register_ok"
         />
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"/>
    <Button
        android:id="@+id/btn_register_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/gris"
        android:textColor="@color/blanc"
        android:text="@string/btn_register_back"
       />
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"/>
    </LinearLayout>
</LinearLayout>